--- a/Biocell/index.html
+++ b/Biocell/index.html
@@ -128,6 +128,8 @@
       href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap"
       rel="stylesheet"
     />
+
+    <link rel = "stylesheet" href="./css/biocell.css"
   </head>
   <body id="bg">
     <div class="page-wraper" id="scroll-container">
@@ -174,22 +176,23 @@
                   /></a>
                 </div>
                 <ul class="nav navbar-nav">
-                  <li class="has-mega-menu sub-menu-down auto-width menu-left">
+                  <!-- removed the sub-menu-down class cause no sub menu for now. -->
+                  <li class="has-mega-menu auto-width menu-left">
                     <a href="index.html"><span>Home</span></a>
                   </li>
-                  <li class="has-mega-menu sub-menu-down">
+                  <li class="has-mega-menu">
                     <a href="javascript:void(0);"><span>Medicines</span></a>
                   </li>
-                  <li class="has-mega-menu sub-menu-down auto-width">
+                  <li class="has-mega-menu auto-width">
                     <a href="javascript:void(0);"><span>About Us</span></a>
                   </li>
-                  <li class="has-mega-menu sub-menu-down">
+                  <li class="has-mega-menu">
                     <a href="javascript:void(0);"><span>Gallery</span></a>
                   </li>
-                  <li class="has-mega-menu sub-menu-down wide-width">
+                  <li class="has-mega-menu wide-width">
                     <a href="javascript:void(0);"><span>Our Team</span></a>
                   </li>
-                  <li class="sub-menu-down">
+                  <li class="">
                     <a href="javascript:void(0);"><span>Contact Us</span></a>
                   </li>
                 </ul>
@@ -199,28 +202,28 @@
                       <a
                         class="fab fa-facebook-f"
                         target="_blank"
-                        href="https://www.facebook.com/dexignzone"
+                        href="https://www.facebook.com/"
                       ></a>
                     </li>
                     <li>
                       <a
                         class="fab fa-twitter"
                         target="_blank"
-                        href="https://twitter.com/dexignzones"
+                        href="https://twitter.com/"
                       ></a>
                     </li>
                     <li>
                       <a
                         class="fab fa-linkedin-in"
                         target="_blank"
-                        href="https://www.linkedin.com/showcase/3686700/admin/"
+                        href="https://www.linkedin.com/"
                       ></a>
                     </li>
                     <li>
                       <a
                         class="fab fa-instagram"
                         target="_blank"
-                        href="https://www.instagram.com/dexignzone/"
+                        href="https://www.instagram.com/"
                       ></a>
                     </li>
                   </ul>
@@ -381,16 +384,21 @@
         <!-- Banner Start -->
         <div class="main-banner style-1">
           <div class="container">
+            <div class="site-title">
+              <h1 class="title" data-wow-delay="0.2s">
+                Manufacture Global Standard Ayurvedic products
+              </h1>
+            </div>
             <div class="row justify-content-center">
               <div
                 class="col-xl-3 col-lg-7 col-md-7 align-self-start order-md-0 order-1"
               >
                 <div class="single-product-info-left">
-                  <div class="content-info">
+                  <!-- <div class="content-info">
                     <h1 class="title wow fadeInUp" data-wow-delay="0.2s">
-                      Plant make better life
+                      Manufacture Global Standard Ayurvedic products
                     </h1>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="bottom-contant">
                   <div class="Plant-2">
@@ -1358,7 +1366,7 @@
         </section>
 
         <!--images section -->
-        <!-- <div class="content-inner bg-light">
+        <div class="content-inner bg-light">
           <div class="container-fluid">
             <div class="gallery-wrapper" id="lightgallery">
               <div class="gallery-col">
@@ -1477,7 +1485,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
         <!--images section End-->
 
         <!-- Products  Section Start-->
