start blog page

--- a/Biocell/our-team.html
+++ b/Biocell/our-team.html
@@ -348,7 +348,7 @@
 						<div class="section-head our-team">
 							<h2 class="title">Meet our team of creators, designers, and world-class problem solvers</h2>
 							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words.</p>
-							<a class="btn btn-secondary me-3" href="shop-registration.html">Join Our Team</a>
+							<a class="btn btn-secondary me-3 white-btn" href="shop-registration.html">Join Our Team</a>
 						</div>
 					</div>
 					<div class="col-xl-3 col-lg-4 col-md-4 col-sm-4 col-6 wow fadeInUp" data-wow-delay="0.2s">
@@ -449,6 +449,20 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="right-text-bar">
+            <ul>
+              <li><img src="image/pic2.png" alt="" /></li>
+              <li><img src="image/1 (1).png" alt="" /></li>
+            </ul>
+          </div>
+          <div class="left-side-image">
+            <ul>
+              <li><img src="image/9.jfif" alt="" /></li>
+              <li><img src="image/10.jfif" alt="" /></li>
+            </ul>
+          </div>
+
 		</section>
 	
 	</div>	
