--- a/Biocell/about-us.html
+++ b/Biocell/about-us.html
@@ -4,7 +4,7 @@
 	<head>
 
 		<!-- Title -->
-		<title>PlantZone Shop & eCommerce HTML Template | DexignZone</title>
+		<title>Biocell</title>
 		
 		<!-- Meta -->
 		<meta charset="utf-8">
@@ -412,7 +412,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="btn btn-outline-secondary btn-lg" href="product-default.html">View Details</a>
+						<a class="btn btn-outline-secondary btn-lg white-btn" href="product-default.html">View Details</a>
 					</div>	
 				</div>
 			</div>
@@ -773,10 +773,25 @@
 						</div>
 					</div>
 					<div class="col-lg-12  m-b30 text-center">
-						<a class="btn btn-secondary " href="blog-dark-2-column.html">Loadmore</a>
+						<a class="btn btn-secondary white-btn" href="blog-dark-2-column.html">Load More</a>
 					</div>
 				</div>
 			</div>
+			
+			<div class="right-text-bar">
+            <ul>
+              <li><img src="image/pic2.png" alt="" /></li>
+              <li><img src="image/1 (1).png" alt="" /></li>
+            </ul>
+          </div>
+          <div class="left-side-image">
+            <ul>
+              <li><img src="image/9.jfif" alt="" /></li>
+              <li><img src="image/10.jfif" alt="" /></li>
+            </ul>
+          </div>
+			 
+
 		</section>	
 		
 		<!-- Companies -->
