--- a/Biocell/index.html
+++ b/Biocell/index.html
@@ -432,7 +432,7 @@
                   </ul>
 
                   <a
-                    class="btn btn-outline-secondary m-b30 btn-lg"
+                    class="btn btn-outline-secondary m-b30 btn-lg white-btn"
                     href="about-us.html"
                     >Our Products</a
                   >
@@ -829,7 +829,7 @@
                     class="d-flex justify-content-between align-items-center"
                   >
                     <a
-                      class="btn btn-outline-secondary m-b30 btn-lg"
+                      class="btn btn-outline-secondary m-b30 btn-lg white-btn
                       href="about-us.html"
                       >Apply for Free Medicine</a
                     >
