--- a/Biocell/index.html
+++ b/Biocell/index.html
@@ -207,8 +207,12 @@
                   <li class="sub-menu-down has-mega-menu auto-width">
                     <a href="javascript:void(0);"><span>About Us</span></a>
                   </li>
-                  <li class="sub-menu-down has-mega-menu">
+                  <li class="sub-menu-down has-mega-menu gallery">
                     <a href="javascript:void(0);"><span>Gallery</span></a>
+                    <ul class="sub-menu">
+                      <li><a href="image-gallery.html">Image Gallery</a></li>
+                      <li><a href="video-gallery.html">Video Gallery</a></li>
+                    </ul>
                   </li>
                   <li class="sub-menu-down has-mega-menu wide-width">
                     <a href="javascript:void(0);"><span>Our Team</span></a>
@@ -2508,6 +2512,7 @@
     <!-- CUSTOM JS -->
 
     <script>
+// we are serving countup animation
 const boxes = document.querySelectorAll('.box .number');
 const boxesContainer = document.querySelector('.boxes');
 
