done. project initial stage

--- a/Biocell/contact-us.html
+++ b/Biocell/contact-us.html
@@ -4,7 +4,7 @@
 	<head>
 
 		<!-- Title -->
-		<title>PlantZone Shop & eCommerce HTML Template | DexignZone</title>
+		<title>Biocell</title>
 		
 		<!-- Meta -->
 		<meta charset="utf-8">
@@ -50,14 +50,16 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
+
+		<link rel = "stylesheet" href="./css/biocell.css"> 
 	
 	</head>	
 
 <body>
 <div class="page-wraper">
-<div id="loading-area" class="loading-page-1">
-	<div class="text"><span class="text-primary">Plant</span>Zone</div>
-</div>
+	<div id="loading-area" class="loading-page-1">
+		<div class="text">Bi<span class="text-primary">o</span>cell</div>
+	 </div>
 	
 <!-- Header Star -->
 <header class="site-header mo-left header ">		
@@ -879,7 +881,7 @@
 	
 	<div class="page-content">
 		<!--Banner Start-->
-		<div class="dz-bnr-inr" style="background-image:url(images/background/bg1.jpg);">
+		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
@@ -959,7 +961,7 @@
 			<div class="container-fluid">
 				<div class="map-iframe map">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227748.3825624477!2d75.65046970649679!3d26.88544791796718!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4adf4c57e281%3A0xce1c63a0cf22e09!2sJaipur%2C+Rajasthan!5e0!3m2!1sen!2sin!4v1500819483219" style="border:0; width:100%; min-height:100%; margin-bottom: -8px;" allowfullscreen></iframe>
-					<span class="logo-badge"><img src="images/favicon.png" alt=""> <img src="images/star.png" alt="" class="shap"></span>
+					<span class="logo-badge"><img class="logo" src="image/biocell-logo.jpg" alt=""> <img src="images/star.png" alt="" class="shap"></span>
 				</div>
 			</div>
 		</div>
@@ -1021,33 +1023,6 @@
 			</div>
 		</div>
 
-
-		<!-- Newsletter Start-->
-			<section class="content-inner-3  overflow-hidden position-relative border-top">
-				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-lg-6 col-md-12">
-							<div class="section-head style-2 d-block wow fadeInUp" data-wow-delay="0.2s">
-								<h2 class="title mb-4">Subscribe Newsletter & Get Plant News</h2>
-							</div>
-						</div>
-						<div class="col-lg-6 col-md-12 m-b30 wow fadeInUp" data-wow-delay="0.4s">
-							<form class="dzSubscribe style-2" action="script/mailchamp.php" method="post">
-								<div class="dzSubscribeMsg"></div>
-								<div class="form-group">
-									<div class="input-group mb-0">
-										<input name="dzEmail" required="required" type="email" class="form-control h-70" placeholder="Your Email Address">
-										<div class="sub-btn">
-											<button name="submit" value="Submit" type="submit" class="btn btn-secondary">Subscribe Now</button>
-										</div>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</section>
-		<!-- Newsletter End -->
 
 	</div>
 	
