--- a/Biocell/news-and-blogs.html
+++ b/Biocell/news-and-blogs.html
@@ -358,9 +358,9 @@
 									</ul>
 								</div>
 								<h2 class="dz-title">
-									<a href="post-standard.html">Home and Nature: Plant Care Tips for a Balanced Lifestyle</a>
+									<a href="single-post.html">Home and Nature: Plant Care Tips for a Balanced Lifestyle</a>
 								</h2>
-								<a href="post-standard.html" class="font-14 mt-auto read-btn">Read More 
+								<a href="single-post.html" class="font-14 mt-auto read-btn">Read More 
 									<i class="icon feather icon-chevron-right"></i>
 								</a>
 							</div>
@@ -378,9 +378,9 @@
 									</ul>
 								</div>
 								<h2 class="dz-title">
-									<a href="post-standard.html">The Art of Indoor Gardening: Crafting Beauty with Plant Care Wisdom</a>
+									<a href="single-post.html">The Art of Indoor Gardening: Crafting Beauty with Plant Care Wisdom</a>
 								</h2>
-								<a href="post-standard.html" class="font-14 mt-auto read-btn">Read More 
+								<a href="single-post.html" class="font-14 mt-auto read-btn">Read More 
 									<i class="icon feather icon-chevron-right"></i>
 								</a>
 							</div>
@@ -398,9 +398,9 @@
 									</ul>
 								</div>
 								<h2 class="dz-title">
-									<a href="post-standard.html">Indoor Oasis: Creating a Serene Space with Proper Plant Care</a>
+									<a href="single-post.html">Indoor Oasis: Creating a Serene Space with Proper Plant Care</a>
 								</h2>
-								<a href="post-standard.html" class="font-14 mt-auto read-btn">Read More 
+								<a href="single-post.html" class="font-14 mt-auto read-btn">Read More 
 									<i class="icon feather icon-chevron-right"></i>
 								</a>
 							</div>
@@ -418,9 +418,9 @@
 									</ul>
 								</div>
 								<h2 class="dz-title">
-									<a href="post-standard.html">The Ultimate Plant Care Checklist: Keeping Your Indoor Garden Thriving</a>
+									<a href="single-post.html">The Ultimate Plant Care Checklist: Keeping Your Indoor Garden Thriving</a>
 								</h2>
-								<a href="post-standard.html" class="font-14 mt-auto read-btn">Read More 
+								<a href="single-post.html" class="font-14 mt-auto read-btn">Read More 
 									<i class="icon feather icon-chevron-right"></i>
 								</a>
 							</div>
@@ -507,32 +507,32 @@
 							<ul>
 								<li>
 									<div class="dz-media">
-										<a href="post-standard.html"><img src="images/shop/product/small/1.png" alt=""></a>
+										<a href="single-post.html"><img src="images/shop/product/small/1.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="dz-media">
-										<a href="post-standard.html"><img src="images/shop/product/small/2.png" alt=""></a>
+										<a href="single-post.html"><img src="images/shop/product/small/2.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="dz-media">
-										<a href="post-standard.html"><img src="images/shop/product/small/3.png" alt=""></a>
+										<a href="single-post.html"><img src="images/shop/product/small/3.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="dz-media">
-										<a href="post-standard.html"><img src="images/shop/product/small/4.png" alt=""></a>
+										<a href="single-post.html"><img src="images/shop/product/small/4.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="dz-media">
-										<a href="post-standard.html"><img src="images/shop/product/small/5.png" alt=""></a>
+										<a href="single-post.html"><img src="images/shop/product/small/5.png" alt=""></a>
 									</div>
 								</li>
 								<li>
 									<div class="dz-media">
-										<a href="post-standard.html"><img src="images/shop/product/small/6.png" alt=""></a>
+										<a href="single-post.html"><img src="images/shop/product/small/6.png" alt=""></a>
 									</div>
 								</li>
 							</ul>
