--- a/Biocell/image-gallery.html
+++ b/Biocell/image-gallery.html
@@ -1,62 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-
 		<!-- Title -->
-		<title>PlantZone Shop & eCommerce HTML Template | DexignZone</title>
-		
+		<title>Biocell</title>
+  
 		<!-- Meta -->
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="author" content="DexignZone">
-		<meta name="robots" content="index, follow">
-		<meta name="format-detection" content="telephone=no">
-		
-		<meta name="keywords" content="garden shop, flowers, landscape gardener, delivery, ecommerce, greenery, order, shopping, store, portfolio, plant template, plant store, plant showcase, nursery technology, ecommerce web, eCommerce website, minimal shop, online shop, online shopping, plantzone, user interface, user experience, trendy, stylish, development, farmer">
-		
-		<meta name="description" content="Elevate your online retail presence with PlantZone Shop & eCommerce HTML Template. Meticulously crafted, this responsive and feature-rich template offers a seamless and visually stunning shopping experience for plant enthusiasts. Explore a world of possibilities with modern design elements, intuitive navigation, and customizable features. Transform your website into a dynamic online storefront with PlantZone, where style seamlessly meets functionality, ensuring a captivating and user-friendly eCommerce journey through the lush world of plants.">
-		
-		<meta property="og:title" content="PlantZone Shop & eCommerce HTML Template | DexignZone">
-		<meta property="og:description" content="Elevate your online retail presence with PlantZone Shop & eCommerce HTML Template. Meticulously crafted, this responsive and feature-rich template offers a seamless and visually stunning shopping experience for plant enthusiasts. Explore a world of possibilities with modern design elements, intuitive navigation, and customizable features. Transform your website into a dynamic online storefront with PlantZone, where style seamlessly meets functionality, ensuring a captivating and user-friendly eCommerce journey through the lush world of plants.">
-		<meta property="og:image" content="https://plantzone.dexignzone.com/xhtml/social-image.png">
-		
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="author" content="DexignZone" />
+		<meta name="robots" content="index, follow" />
+		<meta name="format-detection" content="telephone=no" />
+  
+		<meta
+		  name="keywords"
+		  content="garden shop, flowers, landscape gardener, delivery, ecommerce, greenery, order, shopping, store, portfolio, plant template, plant store, plant showcase, nursery 
+	  technology, ecommerce web, eCommerce website, minimal shop, online shop, online shopping, plantzone, user interface, user experience, trendy, stylish, development, farmer"
+		/>
+  
+		<meta
+		  name="description"
+		  content="Elevate your online retail presence with PlantZone Shop & eCommerce HTML Template. Meticulously crafted, this responsive and feature-rich template offers a seamless 
+	  and visually stunning shopping experience for plant enthusiasts. Explore a world of possibilities with modern design elements, intuitive navigation, and customizable features. Transform your website into a 
+	  dynamic online storefront with PlantZone, where style seamlessly meets functionality, ensuring a captivating and user-friendly eCommerce journey through the lush world of plants."
+		/>
+  
+		<meta
+		  property="og:title"
+		  content="PlantZone Shop & eCommerce HTML Template | DexignZone"
+		/>
+		<meta
+		  property="og:description"
+		  content="Elevate your online retail presence with PlantZone Shop & eCommerce HTML Template. Meticulously crafted, this responsive and feature-rich template offers a seamless and visually 
+	  stunning shopping experience for plant enthusiasts. Explore a world of possibilities with modern design elements, intuitive navigation, and customizable features. Transform your website into a dynamic online storefront with PlantZone,
+		where style seamlessly meets functionality, ensuring a captivating and user-friendly eCommerce journey through the lush world of plants."
+		/>
+		<meta
+		  property="og:image"
+		  content="https://plantzone.dexignzone.com/xhtml/social-image.png"
+		/>
+  
 		<!-- TWITTER META -->
-		<meta name="twitter:title" content="PlantZone: Shop & eCommerce Bootstrap HTML Template | DexignZone">
-		<meta name="twitter:description" content="Elevate your online retail presence with PlantZone Shop & eCommerce HTML Template. Meticulously crafted, this responsive and feature-rich template offers a seamless and visually stunning shopping experience for plant enthusiasts. Explore a world of possibilities with modern design elements, intuitive navigation, and customizable features. Transform your website into a dynamic online storefront with PlantZone, where style seamlessly meets functionality, ensuring a captivating and user-friendly eCommerce journey through the lush world of plants.">
-		<meta name="twitter:image" content="https://plantzone.dexignzone.com/xhtml/social-image.png">
-		<meta name="twitter:card" content="summary_large_image">
-		
+		<meta
+		  name="twitter:title"
+		  content="PlantZone: Shop & eCommerce Bootstrap HTML Template | DexignZone"
+		/>
+		<meta
+		  name="twitter:description"
+		  content="Elevate your online retail presence with PlantZone Shop & eCommerce HTML Template. Meticulously crafted, this responsive and feature-rich template offers a seamless and visually stunning shopping
+		experience for plant enthusiasts. Explore a world of possibilities with modern design elements, intuitive navigation, and customizable features. Transform your website into a dynamic online storefront with PlantZone, where style seamlessly meets functionality, ensuring a 
+		captivating and user-friendly eCommerce journey through the lush world of plants."
+		/>
+		<meta
+		  name="twitter:image"
+		  content="https://plantzone.dexignzone.com/xhtml/social-image.png"
+		/>
+		<meta name="twitter:card" content="summary_large_image" />
+  
 		<!-- CANONICAL URL -->
-		<link rel="canonical" href="https://plantzone.dexignzone.com/xhtml/cobble-style-1.html">
-		
+		<link
+		  rel="canonical"
+		  href="https://plantzone.dexignzone.com/xhtml/index.html"
+		/>
+  
 		<!-- FAVICONS ICON -->
-		<link rel="icon" type="image/x-icon" href="images/favicon.png">
-		
+		<link rel="icon" type="image/x-icon" href="image/biocell-logo.jpg" />
+  
 		<!-- MOBILE SPECIFIC -->
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+  
 		<!-- STYLESHEETS -->
-		<link rel="stylesheet" type="text/css" href="vendor/bootstrap-select/dist/css/bootstrap-select.min.css">
-		<link rel="stylesheet" type="text/css" href="vendor/swiper/swiper-bundle.min.css">
-		<link rel="stylesheet" type="text/css" href="vendor/nouislider/nouislider.min.css">
-		<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-		
+		<link rel="stylesheet" type="text/css" href="icons/iconly/index.min.css" />
+		<link
+		  rel="stylesheet"
+		  type="text/css"
+		  href="vendor/magnific-popup/magnific-popup.min.css"
+		/>
+		<link
+		  rel="stylesheet"
+		  type="text/css"
+		  href="vendor/bootstrap-select/dist/css/bootstrap-select.min.css"
+		/>
+		<link
+		  rel="stylesheet"
+		  type="text/css"
+		  href="vendor/swiper/swiper-bundle.min.css"
+		/>
+		<link
+		  rel="stylesheet"
+		  type="text/css"
+		  href="vendor/nouislider/nouislider.min.css"
+		/>
+		<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css" />
+		<link
+		  rel="stylesheet"
+		  type="text/css"
+		  href="vendor/lightgallery/dist/css/lightgallery.css"
+		/>
+		<link
+		  rel="stylesheet"
+		  type="text/css"
+		  href="vendor/lightgallery/dist/css/lg-thumbnail.css"
+		/>
+		<link
+		  rel="stylesheet"
+		  type="text/css"
+		  href="vendor/lightgallery/dist/css/lg-zoom.css"
+		/>
+  
 		<!-- Custom Stylesheet -->
-		<link class="main-css" rel="stylesheet" type="text/css" href="css/style.css">
-		<link class="skin" type="text/css" rel="stylesheet" href="css/skin/skin-1.css">
-		
+		<link
+		  class="main-css"
+		  rel="stylesheet"
+		  type="text/css"
+		  href="css/style.css"
+		/>
+		<link
+		  class="skin"
+		  type="text/css"
+		  rel="stylesheet"
+		  href="css/skin/skin-1.css"
+		/>
+  
 		<!-- GOOGLE FONTS-->
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
-	
-	</head>	
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+		  href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap"
+		  rel="stylesheet"
+		/>
+  
+		<link rel = "stylesheet" href="./css/biocell.css"> 
+  
+	 </head>
 
 <body>
 <div class="page-wraper">
-<div id="loading-area" class="loading-page-1">
-	<div class="text"><span class="text-primary">Plant</span>Zone</div>
-</div>
+	<div id="loading-area" class="loading-page-1">
+		<div class="text">Bi<span class="text-primary">o</span>cell</div>
+	 </div>
 	
 <!-- Header Star -->
 <header class="site-header mo-left header ">		
@@ -67,7 +148,7 @@
 				
 				<!-- Website Logo -->
 				<div class="logo-header logo-dark me-md-5">
-					<a href="index.html"><img src="images/logo.svg" alt="logo"></a>
+					<a href="index.html"><img src="image/biocell-logo-with-name.jfif" alt="logo"></a>
 				</div>
 				
 				<!-- Nav Toggle Button -->
@@ -878,13 +959,13 @@
 	
 	<div class="page-content">
 		<!--Banner Start-->
-		<div class="dz-bnr-inr" style="background-image:url(images/background/bg1.jpg);">
+		<div class="dz-bnr-inr" style="background-image:url(image/breadcrumb-banner.jpg);">
 			<div class="container">
 				<div class="dz-bnr-inr-entry">
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
-							<li class="breadcrumb-item">Cobble Style 1</li>
+							<li class="breadcrumb-item">Image Gallery</li>
 						</ul>
 					</nav>
 				</div>
@@ -919,13 +1000,13 @@
 				<div class="clearfix">
 					<ul id="masonry" class="lightgallery row" data-masonry='{"percentPosition": true}'>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All plant-paradise small-plants">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<a href="portfolio-details-1.html">
 									<div class="dz-media">
 										<img src="images/portfolio/portfolio3/pic1.jpg" alt="/">
 									</div>
 								</a>
-								<div class="dz-content w-100">
+								<div class="dz-content">
 									<div class="product-tag">
 										<a href="portfolio-details-1.html">
 											<span class="badge">Plant</span>
@@ -936,13 +1017,13 @@
 							</div>
 						</li>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All house-plants plant-paradise small-plants">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="portfolio-details-1.html">
 										<img src="images/portfolio/portfolio3/pic2.jpg" alt="/">
 									</a>
 								</div>
-								<div class="dz-content w-100">
+								<div class="dz-content">
 									<div class="product-tag">
 										<a href="portfolio-details-1.html">
 											<span class="badge">Plant</span>
@@ -953,7 +1034,7 @@
 							</div>
 						</li>
 						<li class="card-container col-xl-6 col-lg-6 col-md-6 col-sm-6 m-b30 All fern-fantasy small-plants">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="portfolio-details-1.html">
 										<img src="images/portfolio/portfolio3/pic3.jpg" alt="/">
@@ -970,13 +1051,13 @@
 							</div>
 						</li>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="portfolio-details-1.html">
 										<img src="images/portfolio/portfolio3/pic4.jpg" alt="/">
 									</a>
 								</div>
-								<div class="dz-content w-100">
+								<div class="dz-content">
 									<div class="product-tag">
 										<a href="portfolio-details-1.html">
 											<span class="badge">Plant</span>
@@ -987,13 +1068,13 @@
 							</div>
 						</li>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All plant-paradise">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="portfolio-details-1.html">
 										<img src="images/portfolio/portfolio3/pic5.jpg" alt="/">
 									</a>
 								</div>
-								<div class="dz-content w-100">
+								<div class="dz-content">
 									<div class="product-tag">
 										<a href="portfolio-details-1.html">
 											<span class="badge">Plant</span>
@@ -1004,7 +1085,7 @@
 							</div>
 						</li>
 						<li class="card-container col-xl-6 col-lg-6 col-md-6 col-sm-6 m-b30 All house-plants">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="portfolio-details-1.html">
 										<img src="images/portfolio/portfolio3/pic6.jpg" alt="/">
@@ -1021,13 +1102,13 @@
 							</div>
 						</li>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All fern-fantasy small-plants">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="portfolio-details-1.html">
 										<img src="images/portfolio/portfolio3/pic7.jpg" alt="/">
 									</a>
 								</div>
-								<div class="dz-content w-100">
+								<div class="dz-content">
 									<div class="product-tag">
 										<a href="portfolio-details-1.html">
 											<span class="badge">Plant</span>
@@ -1038,13 +1119,13 @@
 							</div>
 						</li>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="portfolio-details-1.html">
 										<img src="images/portfolio/portfolio3/pic8.jpg" alt="/">
 									</a>
 								</div>
-								<div class="dz-content w-100">
+								<div class="dz-content">
 									<div class="product-tag">
 										<a href="portfolio-details-1.html">
 											<span class="badge">Plant</span>
@@ -1055,13 +1136,13 @@
 							</div>
 						</li>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner fern-fantasy">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="portfolio-details-1.html">
 										<img src="images/portfolio/portfolio3/pic9.jpg" alt="/">
 									</a>
 								</div>
-								<div class="dz-content w-100">
+								<div class="dz-content">
 									<div class="product-tag">
 										<a href="portfolio-details-1.html">
 											<span class="badge">Plant</span>
@@ -1072,13 +1153,13 @@
 							</div>
 						</li>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner small-plants house-plants">
-							<div class="portfolio-box style-2">
+							<div class="portfolio-box style-1">
 								<div class="dz-media">
 									<a href="portfolio-details-1.html">
 										<img src="images/portfolio/portfolio3/pic10.jpg" alt="/">
 									</a>
 								</div>
-								<div class="dz-content w-100">
+								<div class="dz-content">
 									<div class="product-tag">
 										<a href="portfolio-details-1.html">
 											<span class="badge">Plant</span>
@@ -1093,32 +1174,6 @@
 			</div>
 		</section>
 
-		<!-- Newsletter Start-->
-		<section class="content-inner-3  overflow-hidden position-relative border-top">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6 col-md-12">
-						<div class="section-head style-2 d-block wow fadeInUp" data-wow-delay="0.2s">
-							<h2 class="title mb-4">Subscribe Newsletter & Get Plant News</h2>
-						</div>
-					</div>
-					<div class="col-lg-6 col-md-12 m-b30 wow fadeInUp" data-wow-delay="0.4s">
-						<form class="dzSubscribe style-2" action="script/mailchamp.php" method="post">
-							<div class="dzSubscribeMsg"></div>
-							<div class="form-group">
-								<div class="input-group mb-0">
-									<input name="dzEmail" required="required" type="email" class="form-control h-70" placeholder="Your Email Address">
-									<div class="sub-btn">
-										<button name="submit" value="Submit" type="submit" class="btn btn-secondary">Subscribe Now</button>
-									</div>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</section>
-	<!-- Newsletter End -->
 
 	</div>
 	
