--- a/Biocell/index.html
+++ b/Biocell/index.html
@@ -146,14 +146,14 @@
             <div class="dz-topbar-inner d-flex justify-content-between align-items-center">
               <div class="dz-topbar-left">
                 <ul>
-                  <li><a href="about-us.html">Helpline : +880 123 456 7890</a></li>
+                  <li><a href="#">Helpline : +880 123 456 7890</a></li>
                 </ul>
               </div>
               <div class="dz-topbar-right">
                 <ul>
-                  <li><a href="about-us.html">Channel Partner</a></li>
-                  <li><a href="contact-us-1.html">Distribution Partner</a></li>
-                  <li><a href="contact-us-1.html">Career Opportunities</a></li>
+                  <li><a href="channel-partner.html">Channel Partner</a></li>
+                  <li><a href="distribution-partner.html">Distribution Partner</a></li>
+                  <li><a href="career-opportunities.html">Career Opportunities</a></li>
                 </ul>
               </div>
             </div>
@@ -202,26 +202,37 @@
                     <a href="index.html"><span>Home</span></a>
                   </li>
                   <li class="sub-menu-down has-mega-menu">
-                    <a href="javascript:void(0);"><span>Medicines</span></a>
+                    <a href="product-page.html"><span>Medicines</span></a>
                   </li>
-                  <li class="sub-menu-down has-mega-menu auto-width">
-                    <a href="javascript:void(0);"><span>About Us</span></a>
+                  <li class="sub-menu-down has-mega-menu">
+                    <a href="news-and-blogs.html"><span>Blogs</span></a>
                   </li>
-                  <li class="sub-menu-down has-mega-menu gallery">
+                  <li class="sub-menu-down has-mega-menu">
                     <a href="javascript:void(0);"><span>Gallery</span></a>
                     <ul class="sub-menu">
                       <li><a href="image-gallery.html">Image Gallery</a></li>
                       <li><a href="video-gallery.html">Video Gallery</a></li>
                     </ul>
                   </li>
+                  <li class="sub-menu-down has-mega-menu auto-width">
+                    <a href="javascript:void(0);"><span>About</span></a>
+                    <ul class="sub-menu">
+                      <li><a href="about-us.html">About Us</a></li>
+                      <li><a href="our-team.html">Biocell Team</a></li>
+                      <li><a href="image-gallery.html">Why Choose Us</a></li>
+                      <li><a href="credentials.html">Credentials</a></li>
+                    </ul>
+                  </li>
                   <li class="sub-menu-down has-mega-menu wide-width">
-                    <a href="javascript:void(0);"><span>Our Team</span></a>
+                    <a href="javascript:void(0);"><span>Lab Facility</span></a>
+                    <ul class="sub-menu">
+                      <li><a href="raw-materials.html">Raw Materials</a></li>
+                      <li><a href="medicine-production.html">Medicine Production</a></li>
+                      <li><a href="quality-assurance.html">Quality Assurances</a></li>
+                    </ul>
                   </li>
                   <li class="sub-menu-down">
-                    <a href="javascript:void(0);"><span>Contact Us</span></a>
-                  </li>
-                  <li class="sub-menu-down">
-                    <a href="javascript:void(0);"><span>Credentials</span></a>
+                    <a href="contact-us.html"><span>Contact Us</span></a>
                   </li>
                 </ul>
                 <div class="dz-social-icon">
@@ -326,50 +337,6 @@
                   <li>+1012 3456 789</li>
                 </ul>
 
-                <h4 class="dz-title">Newsletter</h4>
-                <form
-                  class="dzSubscribe dz-subscribe-wrapper1"
-                  action="script/mailchamp.php"
-                  method="post"
-                >
-                  <div class="dzSubscribeMsg"></div>
-                  <div class="form-group">
-                    <div class="input-group mb-0">
-                      <input
-                        name="dzEmail"
-                        required="required"
-                        type="email"
-                        class="form-control"
-                        placeholder="Your Email Address"
-                      />
-                      <div class="input-group-addon">
-                        <button
-                          name="submit"
-                          value="Submit"
-                          type="submit"
-                          class="btn"
-                        >
-                          <i class="icon feather icon-arrow-right"></i>
-                        </button>
-                      </div>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex m-b40">
-                      <input
-                        type="checkbox"
-                        class="form-check-input"
-                        id="basic_checkbox_1"
-                      />
-                      <label class="form-check-label"
-                        >I Agree To The
-                        <span
-                          ><a href="privacy-policy.html"
-                            >Privacy Policy</a
-                          ></span
-                        ></label
-                      >
-                    </div>
-                  </div>
-                </form>
                 <h4 class="dz-title">Follow Us</h4>
                 <div class="dz-social-icon dz-hover-move style-2 mb-5">
                   <ul>
@@ -2335,7 +2302,7 @@
                 data-wow-delay="0.1s"
               >
                 <div class="widget widget_about me-2">
-                  <h6>Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. </h6>
+                  <h6>Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. </h6>
                 </div>
                 <div class="row">
                   <div
