--- a/Biocell/video-gallery.html
+++ b/Biocell/video-gallery.html
@@ -49,14 +49,16 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
+
+		<link rel = "stylesheet" href="./css/biocell.css"> 
 	
 	</head>	
 
 <body>
 <div class="page-wraper">
-<div id="loading-area" class="loading-page-1">
-	<div class="text"><span class="text-primary">Plant</span>Zone</div>
-</div>
+	<div id="loading-area" class="loading-page-1">
+		<div class="text">Bi<span class="text-primary">o</span>cell</div>
+	 </div>
 	
 <!-- Header Star -->
 <header class="site-header mo-left header ">		
@@ -1076,32 +1078,6 @@
 			</div>
 		</section>
 
-		<!-- Newsletter Start-->
-		<section class="content-inner-3  overflow-hidden position-relative border-top">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6 col-md-12">
-						<div class="section-head style-2 d-block wow fadeInUp" data-wow-delay="0.2s">
-							<h2 class="title mb-4">Subscribe Newsletter & Get Plant News</h2>
-						</div>
-					</div>
-					<div class="col-lg-6 col-md-12 m-b30 wow fadeInUp" data-wow-delay="0.4s">
-						<form class="dzSubscribe style-2" action="script/mailchamp.php" method="post">
-							<div class="dzSubscribeMsg"></div>
-							<div class="form-group">
-								<div class="input-group mb-0">
-									<input name="dzEmail" required="required" type="email" class="form-control h-70" placeholder="Your Email Address">
-									<div class="sub-btn">
-										<button name="submit" value="Submit" type="submit" class="btn btn-secondary">Subscribe Now</button>
-									</div>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</section>
-	<!-- Newsletter End -->
 	</div>
 	
 	
