--- a/Biocell/index.html
+++ b/Biocell/index.html
@@ -167,7 +167,7 @@
               <!-- Website Logo -->
               <div class="logo-header logo-dark me-md-5">
                 <a href="index.html"
-                  ><img src="image/biocell-logo-with-name.jfif" alt="logo"
+                  ><img src="image/biocell-name.jpg" alt="logo"
                 /></a>
               </div>
 
@@ -2359,14 +2359,15 @@
                   <div class="widget widget_services">
                     <h2 class="footer-title">Useful Links</h2>
                     <ul>
-                      <li><a href="javascript:void(0);">Privacy Policy</a></li>
-                      <li><a href="javascript:void(0);">Returns</a></li>
+                      <li><a href="#">Apply For Free Medicine</a></li>
+                      <li><a href="raw-materials.html">Raw Materials</a></li>
+                      <li><a href="medicine-production.html">Medicine Production</a></li>
                       <li>
-                        <a href="javascript:void(0);">Terms & Conditions</a>
+                        <a href="privacy-policy.html">Privacy Policy</a>
                       </li>
-                      <li><a href="javascript:void(0);">Contact Us</a></li>
-                      <li><a href="javascript:void(0);">Latest News</a></li>
-                      <li><a href="javascript:void(0);">Our Sitemap</a></li>
+                      <li>
+                        <a href="terms-and-conditions.html">Terms & Conditions</a>
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -2377,11 +2378,11 @@
                   <div class="widget widget_services">
                     <h2 class="footer-title">Footer Menu</h2>
                     <ul>
-                      <li><a href="javascript:void(0);">Instagram profile</a></li>
-                      <li><a href="javascript:void(0);">New Collection</a></li>
-                      <li><a href="javascript:void(0);">Popular Plant </a></li>
-                      <li><a href="javascript:void(0);">Contact Us</a></li>
-                      <li><a href="javascript:void(0);">Latest News</a></li>
+                      <li><a href="product-page.html">Our Medicines</a></li>
+                      <li><a href="news-and-blogs.html">News and Blogs</a></li>
+                      <li><a href="about-us.html">About Us</a></li>
+                      <li><a href="our-team.html">Our Team</a></li>
+                      <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                   </div>
                 </div>
