--- a/Biocell/news-and-blogs.html
+++ b/Biocell/news-and-blogs.html
@@ -30,7 +30,7 @@
 		<link rel="canonical" href="https://plantzone.dexignzone.com/xhtml/blog-dark-2-column.html">
 		
 		<!-- FAVICONS ICON -->
-		<link rel="icon" type="image/x-icon" href="images/favicon.png">
+		<link rel="icon" type="image/x-icon" href="image/biocell-logo.jpg">
 		
 		<!-- MOBILE SPECIFIC -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,14 +68,14 @@
 				<div class="dz-topbar-inner d-flex justify-content-between align-items-center">
 				<div class="dz-topbar-left">
 					<ul>
-						<li><a href="about-us.html">Helpline : +880 123 456 7890</a></li>
+						<li><a href="#">Helpline : +880 123 456 7890</a></li>
 					</ul>
 				</div>
 				<div class="dz-topbar-right">
 					<ul>
-						<li><a href="about-us.html">Channel Partner</a></li>
-						<li><a href="contact-us-1.html">Distribution Partner</a></li>
-						<li><a href="contact-us-1.html">Career Opportunities</a></li>
+						<li><a href="channel-partner.html">Channel Partner</a></li>
+						<li><a href="distribution-partner.html">Distribution Partner</a></li>
+						<li><a href="career-opportunities.html">Career Opportunities</a></li>
 					</ul>
 				</div>
 				</div>
@@ -89,7 +89,7 @@
 				<!-- Website Logo -->
 				<div class="logo-header logo-dark me-md-5">
 					<a href="index.html"
-						><img src="image/biocell-logo-with-name.jfif" alt="logo"
+						><img src="image/biocell-name.jpg" alt="logo"
 					/></a>
 				</div>
 
@@ -124,22 +124,37 @@
 						<a href="index.html"><span>Home</span></a>
 						</li>
 						<li class="sub-menu-down has-mega-menu">
-						<a href="javascript:void(0);"><span>Medicines</span></a>
+						<a href="product-page.html"><span>Medicines</span></a>
 						</li>
-						<li class="sub-menu-down has-mega-menu auto-width">
-						<a href="javascript:void(0);"><span>About Us</span></a>
+						<li class="sub-menu-down has-mega-menu">
+						<a href="news-and-blogs.html"><span>Blogs</span></a>
 						</li>
 						<li class="sub-menu-down has-mega-menu">
 						<a href="javascript:void(0);"><span>Gallery</span></a>
+						<ul class="sub-menu">
+							<li><a href="image-gallery.html">Image Gallery</a></li>
+							<li><a href="video-gallery.html">Video Gallery</a></li>
+						</ul>
+						</li>
+						<li class="sub-menu-down has-mega-menu auto-width">
+						<a href="javascript:void(0);"><span>About</span></a>
+						<ul class="sub-menu">
+							<li><a href="about-us.html">About Us</a></li>
+							<li><a href="our-team.html">Biocell Team</a></li>
+							<li><a href="image-gallery.html">Why Choose Us</a></li>
+							<li><a href="credentials.html">Credentials</a></li>
+						</ul>
 						</li>
 						<li class="sub-menu-down has-mega-menu wide-width">
-						<a href="javascript:void(0);"><span>Our Team</span></a>
+						<a href="javascript:void(0);"><span>Lab Facility</span></a>
+						<ul class="sub-menu">
+							<li><a href="raw-materials.html">Raw Materials</a></li>
+							<li><a href="medicine-production.html">Medicine Production</a></li>
+							<li><a href="quality-assurance.html">Quality Assurances</a></li>
+						</ul>
 						</li>
 						<li class="sub-menu-down">
-						<a href="javascript:void(0);"><span>Contact Us</span></a>
-						</li>
-						<li class="sub-menu-down">
-						<a href="javascript:void(0);"><span>Credentials</span></a>
+						<a href="contact-us.html"><span>Contact Us</span></a>
 						</li>
 					</ul>
 					<div class="dz-social-icon">
@@ -244,50 +259,6 @@
 						<li>+1012 3456 789</li>
 					</ul>
 
-					<h4 class="dz-title">Newsletter</h4>
-					<form
-						class="dzSubscribe dz-subscribe-wrapper1"
-						action="script/mailchamp.php"
-						method="post"
-					>
-						<div class="dzSubscribeMsg"></div>
-						<div class="form-group">
-						<div class="input-group mb-0">
-							<input
-								name="dzEmail"
-								required="required"
-								type="email"
-								class="form-control"
-								placeholder="Your Email Address"
-							/>
-							<div class="input-group-addon">
-								<button
-								name="submit"
-								value="Submit"
-								type="submit"
-								class="btn"
-								>
-								<i class="icon feather icon-arrow-right"></i>
-								</button>
-							</div>
-						</div>
-						<div class="custom-control custom-checkbox d-flex m-b40">
-							<input
-								type="checkbox"
-								class="form-check-input"
-								id="basic_checkbox_1"
-							/>
-							<label class="form-check-label"
-								>I Agree To The
-								<span
-								><a href="privacy-policy.html"
-									>Privacy Policy</a
-								></span
-								></label
-							>
-						</div>
-						</div>
-					</form>
 					<h4 class="dz-title">Follow Us</h4>
 					<div class="dz-social-icon dz-hover-move style-2 mb-5">
 						<ul>
@@ -453,154 +424,167 @@
 	</div>
 	
 	<!-- Footer -->
-	<footer class="site-footer style-2">
+	<footer class="site-footer style-1">
 		<!-- Footer Top -->
 		<div class="footer-top">
 			<div class="container">
 				<div class="row">
-					<div class="col-xl-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-						<div class="widget widget_about me-2">
-							<div class="footer-logo logo-white">
-								<a href="index.html"><img src="images/logo.svg" alt=""></a> 
-							</div>
-							<ul class="widget-address">
-								<li>
-									<p><span>Address</span> : 451 Wall Street, UK, London</p>
-								</li>
-								<li>
-									<p><span>E-mail</span> : <a href="mailto:example@info.com">example@info.com</a></p>
-								</li>
-								<li>
-									<p><span>Phone</span> : <a href="tel:+9912121211">+919912121211</a></p>
-								</li>
-							</ul>
-							<h2 class="footer-title">Social Profile</h2>
-							<div class="dz-social-icon">
-								<ul>
-									<li>
-										<a href="https://www.facebook.com/dexignzone" target="_blank">
-											<i class="fa-brands fa-facebook-f"></i>
-										</a>
-									</li>
-									<li>
-										<a href="https://twitter.com/dexignzones" target="_blank">
-											<i class="fa-brands fa-twitter"></i>
-										</a>
-									</li>
-									<li>
-										<a href="https://www.linkedin.com/showcase/3686700/admin/" target="_blank">
-											<i class="fa-brands fa-linkedin"></i>
-										</a>
-									</li>
-									<li>
-										<a href="https://www.instagram.com/dexignzone/" target="_blank">
-											<i class="fa-brands fa-instagram"></i>
-										</a>
-									</li>
-								</ul>
-							</div>
+				<div
+					class="col-xl-3 col-md-4 wow fadeInUp"
+					data-wow-delay="0.1s"
+				>
+					<div class="widget widget_about me-2">
+						<div class="footer-logo logo-white">
+						<a href="index.html"
+							><img src="image/biocell-logo-with-name.jfif" alt=""
+						/></a>
 						</div>
-					</div>
-					<div class="col-xl-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
-						<div class="widget widget_post">
-							<h2 class="footer-title">recent Social media post</h2>
-							<ul>
-								<li>
-									<div class="dz-media">
-										<a href="single-post.html"><img src="images/shop/product/small/1.png" alt=""></a>
-									</div>
-								</li>
-								<li>
-									<div class="dz-media">
-										<a href="single-post.html"><img src="images/shop/product/small/2.png" alt=""></a>
-									</div>
-								</li>
-								<li>
-									<div class="dz-media">
-										<a href="single-post.html"><img src="images/shop/product/small/3.png" alt=""></a>
-									</div>
-								</li>
-								<li>
-									<div class="dz-media">
-										<a href="single-post.html"><img src="images/shop/product/small/4.png" alt=""></a>
-									</div>
-								</li>
-								<li>
-									<div class="dz-media">
-										<a href="single-post.html"><img src="images/shop/product/small/5.png" alt=""></a>
-									</div>
-								</li>
-								<li>
-									<div class="dz-media">
-										<a href="single-post.html"><img src="images/shop/product/small/6.png" alt=""></a>
-									</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-2 col-md-4 col-sm-4 col-6 wow fadeInUp" data-wow-delay="0.3s">
-						<div class="widget widget_services">
-							<h2 class="footer-title">Features</h2>
-							<ul>
-								<li><a href="javascript:void(0);">E-Money</a></li>
-								<li><a href="javascript:void(0);">Local Business</a></li>
-								<li><a href="javascript:void(0);">Corporate</a></li>
-								<li><a href="javascript:void(0);">Internet Money</a></li>
-								<li><a href="javascript:void(0);">Latest News</a></li>
-								<li><a href="javascript:void(0);">Staking Ecosystem</a></li>
-							</ul>   
-						</div>
-					</div>
-					<div class="col-xl-2 col-md-4 col-sm-4 col-6 wow fadeInUp" data-wow-delay="0.4s">
-						<div class="widget widget_services">
-							<h2 class="footer-title">Useful Links</h2>
-							<ul>
-								<li><a href="javascript:void(0);">Privacy Policy</a></li>
-								<li><a href="javascript:void(0);">Returns</a></li>
-								<li><a href="javascript:void(0);">Terms & Conditions</a></li>
-								<li><a href="javascript:void(0);">Contact Us</a></li>
-								<li><a href="javascript:void(0);">Latest News</a></li>
-								<li><a href="javascript:void(0);">Our Sitemap</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-2 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.5s">
-						<div class="widget widget_services">
-							<h2 class="footer-title">Footer Menu</h2>
-							<ul>
-								<li><a href="javascript:void(0);">Instagram profile</a></li>
-								<li><a href="javascript:void(0);">New Collection</a></li>
-								<li><a href="javascript:void(0);">Popular Plant </a></li>
-								<li><a href="javascript:void(0);">Contact Us</a></li>
-								<li><a href="javascript:void(0);">Latest News</a></li>
-							</ul>
-						</div>
+						<ul class="widget-address">
+						<li>
+							<p><span>Address</span> : 451 Wall Street, UK, London</p>
+						</li>
+						<li>
+							<p>
+								<span>E-mail</span> :
+								<a href="mailto:example@info.com">example@info.com</a>
+							</p>
+						</li>
+						<li>
+							<p>
+								<span>Phone</span> :
+								<a href="tel:+9912121211">+919912121211</a>
+							</p>
+						</li>
+						</ul>
 					</div>
 				</div>
+				<div
+					class="col-xl-9 col-md-8 wow fadeInUp"
+					data-wow-delay="0.1s"
+				>
+					<div class="widget widget_about me-2">
+						<h6>Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. </h6>
+					</div>
+					<div class="row">
+						<div
+						class="col-xl-6 wow fadeInUp"
+						data-wow-delay="0.2s"
+					>
+						<div class="widget widget_post">
+						<h2 class="footer-title">Recent Posts</h2>
+						<ul>
+							<li>
+								<div class="dz-media">
+								<img src="images/shop/product/small/1.png" alt="" />
+								</div>
+								<div class="dz-content">
+								<h6 class="name">
+									<a href="post-standard.html"
+										>A Journey Through Plant
+									</a>
+								</h6>
+								<span class="time">July 23, 2023</span>
+								</div>
+							</li>
+							<li>
+								<div class="dz-media">
+								<img src="images/shop/product/small/2.png" alt="" />
+								</div>
+								<div class="dz-content">
+								<h6 class="name">
+									<a href="post-standard.html"
+										>Into Plant Care Cultivation</a
+									>
+								</h6>
+								<span class="time">Feb 23, 2024</span>
+								</div>
+							</li>
+							<li>
+								<div class="dz-media">
+								<img src="images/shop/product/small/3.png" alt="" />
+								</div>
+								<div class="dz-content">
+								<h6 class="name">
+									<a href="post-standard.html">The Wonders of Plants</a>
+								</h6>
+								<span class="time">Jun 26, 2024</span>
+								</div>
+							</li>
+						</ul>
+						</div>
+					</div>
+					<div
+						class="col-xl-3 col-6 wow fadeInUp"
+						data-wow-delay="0.4s"
+					>
+						<div class="widget widget_services">
+						<h2 class="footer-title">Useful Links</h2>
+						<ul>
+							<li><a href="#">Apply For Free Medicine</a></li>
+							<li><a href="raw-materials.html">Raw Materials</a></li>
+							<li><a href="medicine-production.html">Medicine Production</a></li>
+							<li>
+								<a href="privacy-policy.html">Privacy Policy</a>
+							</li>
+							<li>
+								<a href="terms-and-conditions.html">Terms & Conditions</a>
+							</li>
+						</ul>
+						</div>
+					</div>
+					<div
+						class="col-xl-3 col-6 wow fadeInUp"
+						data-wow-delay="0.5s"
+					>
+						<div class="widget widget_services">
+						<h2 class="footer-title">Footer Menu</h2>
+						<ul>
+							<li><a href="product-page.html">Our Medicines</a></li>
+							<li><a href="news-and-blogs.html">News and Blogs</a></li>
+							<li><a href="about-us.html">About Us</a></li>
+							<li><a href="our-team.html">Our Team</a></li>
+							<li><a href="contact-us.html">Contact Us</a></li>
+						</ul>
+						</div>
+					</div>
+					</div>
+				</div>
+				</div>
 			</div>
-			<img class="Plant-img wow fadeInLeft" data-wow-delay="0.8s" src="images/Plant-1.png" alt="">
-			<img class="Plant-img2 wow fadeInRight" data-wow-delay="0.8s" src="images/Plant-2.png" alt="">
+
+						
+		<div class="right-text-bar">
+			<ul>
+				<li><img src="image/pic2.png" alt="" /></li>
+				<li><img src="image/1 (1).png" alt="" /></li>
+			</ul>
+		</div>
+		<div class="left-side-image">
+			<ul>
+				<li><img src="image/9.jfif" alt="" /></li>
+				<li><img src="image/10.jfif" alt="" /></li>
+			</ul>
+		</div>
+		
+
 		</div>
 		<!-- Footer Top End -->
-		
+
 		<!-- Footer Bottom -->
 		<div class="footer-bottom">
 			<div class="container">
 				<div class="row fb-inner wow fadeInUp" data-wow-delay="0.1s">
-					<div class="col-lg-6 col-md-12 text-start"> 
-						<p class="copyright-text">© <span class="current-year">2024</span> <a href="https://www.dexignzone.com/">DexignZone</a> Theme. All Rights Reserved.</p>
-					</div>
-					<div class="col-lg-6 col-md-12 text-end"> 
-						<div class="d-flex align-items-center justify-content-center justify-content-md-center justify-content-xl-end">
-							<img src="images/footer-img2.png" alt="">
-						</div>
-					</div>
+					<p class="copyright-text">
+						© <span class="current-year">2024</span>
+						<a href="">FreelanceHub (BD) Limited</a>.
+						All Rights Reserved.
+					</p>
 				</div>
 			</div>
 		</div>
 		<!-- Footer Bottom End -->
 	</footer>
-	<!-- Footer End -->
+		<!-- Footer End -->
 	
 	<button class="scroltop" type="button"><i class="fas fa-arrow-up"></i></button>
 
