--- a/PlantZone-v1.0-15_July_2024/index.html
+++ b/PlantZone-v1.0-15_July_2024/index.html
@@ -131,9 +131,9 @@
   </head>
   <body id="bg">
     <div class="page-wraper" id="scroll-container">
-      <!-- <div id="loading-area" class="loading-page-1">
+      <div id="loading-area" class="loading-page-1">
         <div class="text"><span class="text-primary">Plant</span>Zone</div>
-      </div> -->
+      </div>
 
       <!-- Header Star -->
       <header class="site-header mo-left header">
