production start phase 01

--- a/Biocell/contact-us.html
+++ b/Biocell/contact-us.html
@@ -142,7 +142,7 @@
 						<ul class="sub-menu">
 							<li><a href="about-us.html">About Us</a></li>
 							<li><a href="our-team.html">Biocell Team</a></li>
-							<li><a href="image-gallery.html">Why Choose Us</a></li>
+							                      <li><a href="why-choose-us.html">Why Choose Us</a></li>
 							<li><a href="credentials.html">Credentials</a></li>
 						</ul>
 						</li>
@@ -306,7 +306,7 @@
 					<nav aria-label="breadcrumb" class="breadcrumb-row">
 						<ul class="breadcrumb">
 							<li class="breadcrumb-item"><a href="index.html"> Home</a></li>
-							<li class="breadcrumb-item">contact us</li>
+							<li class="breadcrumb-item">Contact Us</li>
 						</ul>
 					</nav>
 				</div>
@@ -326,7 +326,7 @@
 								<h2 class="title">Office Location</h2>
 							</div>
 							<div class="icon-content">
-								<p>3553 Brandywine Street Northwest, Washington AR 20008</p>
+								<p>NISHANBARI, KALATIA, KERANIGANJ, DHAKA</p>
 							</div>
 						</div>
 					</div>
@@ -339,8 +339,8 @@
 								<h2 class="title">Send a Message</h2>
 							</div>
 							<div class="icon-content">
-								<p>help@Plantzone.com</p>
-								<p>help@Plantzone.com</p>
+								<p>biocell@uni1group.com</p>
+								<p>biocell@uni1group.com</p>
 							</div>
 						</div>
 					</div>
@@ -353,8 +353,8 @@
 								<h2 class="title">Call Us Directly</h2>
 							</div>
 							<div class="icon-content">
-								<p>Phone: 1-800-222-020</p>
-								<p>Fax: 1-800-222-006</p>
+								<p>+880-132-964-3555</p>
+								<p>+880-187-940-1510</p>
 							</div>
 						</div>
 					</div>
@@ -367,8 +367,8 @@
 								<h2 class="title">join Our Team</h2>
 							</div>
 							<div class="icon-content">
-								<p>infoexemple@yahoo.com</p>
-								<p>infoexemple@google.com</p>
+								<p>facebook.com/biocellay</p>
+								<p>facebook.com/biocellay</p>
 							</div>
 						</div>
 					</div>
@@ -379,7 +379,7 @@
 		<div class="content-inner-3 p-b0">
 			<div class="container-fluid">
 				<div class="map-iframe map">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3649.9573479912306!2d90.36282377472502!3d23.820115686097466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x616fa929cfa12fbd%3A0xfca004d518d85ca0!2sFreelance%20Hub%20(BD)%20Limited!5e0!3m2!1sen!2sbd!4v1723893094207!5m2!1sen!2sbd" style="border:0; width:100%; min-height:100%; margin-bottom: -8px;" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1826.3432940645139!2d90.2948581!3d23.7228837!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x375595dc0855a491%3A0x50d75cbe367e013f!2sBiocell%20Ayurvedic%20Ltd.!5e0!3m2!1sen!2sbd!4v1723982558896!5m2!1sen!2sbd" style="border:0; width:100%; min-height:100%; margin-bottom: -8px;" allowfullscreen></iframe>
 					<span class="logo-badge"><img class="logo" src="image/biocell-logo.jpg" alt=""> <img src="images/star.png" alt="" class="shap"></span>
 				</div>
 			</div>
