--- a/Biocell/video-gallery.html
+++ b/Biocell/video-gallery.html
@@ -141,7 +141,7 @@
 						<ul class="sub-menu">
 							<li><a href="about-us.html">About Us</a></li>
 							<li><a href="our-team.html">Biocell Team</a></li>
-							<li><a href="image-gallery.html">Why Choose Us</a></li>
+							                      <li><a href="why-choose-us.html">Why Choose Us</a></li>
 							<li><a href="credentials.html">Credentials</a></li>
 						</ul>
 						</li>
