biocell official image received

--- a/Biocell/image-gallery.html
+++ b/Biocell/image-gallery.html
@@ -393,58 +393,40 @@
 		<!--Banner End-->
 		
 		<section class="content-inner pt-0 z-index-unset">
+			<!-- pore margin add kore dibo ne. apaptoto empty div e thakuk. -->
 			<div class="site-filters style-2 clearfix center">
-				<ul class="filters" data-bs-toggle="buttons">
-					<li data-filter=".All" class="btn active">
-						<a href="javascript:void(0);">All</a> 
-					</li>
-					<li data-filter=".small-plants" class="btn">
-						<a href="javascript:void(0);">Small Plants</a> 
-					</li>
-					<li data-filter=".cactus-corner" class="btn">
-						<a href="javascript:void(0);">Cactus Corner</a> 
-					</li>
-					<li data-filter=".house-plants" class="btn">
-						<a href="javascript:void(0);">House Plants</a> 
-					</li>
-					<li data-filter=".plant-paradise" class="btn">
-						<a href="javascript:void(0);">Plant Paradise</a> 
-					</li>
-					<li data-filter=".fern-fantasy" class="btn">
-						<a href="javascript:void(0);">Fern Fantasy</a> 
-					</li>
-				</ul>
 			</div>
+
 			<div class="container">
 				<div class="clearfix">
 					<ul id="masonry" class="lightgallery row" data-masonry='{"percentPosition": true}'>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All plant-paradise small-plants">
 							<div class="portfolio-box style-1">
-								<a href="portfolio-details-1.html">
+								<a href="javascript:void(0);">
 									<div class="dz-media">
-										<img src="images/portfolio/portfolio3/pic1.jpg" alt="/">
+										<img src="image/lab/lab (4).jpg" alt="/">
 									</div>
 								</a>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="portfolio-details-1.html">Plant Life: Essential Insights</a></h2>
+									<h2 class="title"><a href="javascript:void(0);">Plant Life: Essential Insights</a></h2>
 								</div>
 							</div>
 						</li>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All house-plants plant-paradise small-plants">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio3/pic2.jpg" alt="/">
+									<a href="javascript:void(0);">
+										<img src="image/lab/lab (2).jpg" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
@@ -455,13 +437,13 @@
 						<li class="card-container col-xl-6 col-lg-6 col-md-6 col-sm-6 m-b30 All fern-fantasy small-plants">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio3/pic3.jpg" alt="/">
+									<a href="javascript:void(0);">
+										<img src="image/lab/lab (8).jpg" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
@@ -472,13 +454,13 @@
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio3/pic4.jpg" alt="/">
+									<a href="javascript:void(0);">
+										<img src="image/lab/lab (29).jpg" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
@@ -489,13 +471,13 @@
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All plant-paradise">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio3/pic5.jpg" alt="/">
+									<a href="javascript:void(0);">
+										<img src="image/lab/lab (28).jpg" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
@@ -506,30 +488,30 @@
 						<li class="card-container col-xl-6 col-lg-6 col-md-6 col-sm-6 m-b30 All house-plants">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio3/pic6.jpg" alt="/">
+									<a href="javascript:void(0);">
+										<img src="image/lab/lab (17).jpg" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
-									<h2 class="title"><a href="portfolio-details-1.html">Botanic Marvels: Exploring Diversity</a></h2>
+									<h2 class="title"><a href="javascript:void(0);">Botanic Marvels: Exploring Diversity</a></h2>
 								</div>
 							</div>
 						</li>
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All fern-fantasy small-plants">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio3/pic7.jpg" alt="/">
+									<a href="javascript:void(0);">
+										<img src="image/lab/lab (17).jpg" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
@@ -540,13 +522,13 @@
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio3/pic8.jpg" alt="/">
+									<a href="javascript:void(0);">
+										<img src="image/lab/lab (16).jpg" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
@@ -557,13 +539,13 @@
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner fern-fantasy">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio3/pic9.jpg" alt="/">
+									<a href="javascript:void(0);">
+										<img src="image/lab/lab (15).jpg" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
@@ -574,13 +556,13 @@
 						<li class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-6 m-b30 All cactus-corner small-plants house-plants">
 							<div class="portfolio-box style-1">
 								<div class="dz-media">
-									<a href="portfolio-details-1.html">
-										<img src="images/portfolio/portfolio3/pic10.jpg" alt="/">
+									<a href="javascript:void(0);">
+										<img src="image/lab/lab (14).jpg" alt="/">
 									</a>
 								</div>
 								<div class="dz-content">
 									<div class="product-tag">
-										<a href="portfolio-details-1.html">
+										<a href="javascript:void(0);">
 											<span class="badge">Plant</span>
 										</a>
 									</div>
