--- a/Biocell/news-and-blogs.html
+++ b/Biocell/news-and-blogs.html
@@ -360,7 +360,7 @@
 					<div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
 						<div class="dz-card style-1">
 							<div class="dz-media">
-								<img src="images/blog/blogpost-3/pic3.jpg" alt="/">
+								<img src="image/lab/lab (2).jpg" alt="/">
 							</div>
 							<div class="dz-info">
 								<div class="dz-meta">
@@ -380,7 +380,7 @@
 					<div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
 						<div class="dz-card style-1">
 							<div class="dz-media">
-								<img src="images/blog/blogpost-3/pic4.jpg" alt="/">
+								<img src="image/lab/lab (27).jpg" alt="/">
 							</div>
 							<div class="dz-info">
 								<div class="dz-meta">
